# MIDAS

./: .gitignore  LICENSE  NOTICE  README.md  requirements.txt
configs/: midas.example.yaml  mitigation_policy.yaml
docs/: ARM_ECPF_RUNTIME.md  IMPLEMENTATION_OVERVIEW.md  TEST_RESULTS.md
dpa/midas_dpa_rnn/: meson.build  midas_dpa_rnn_main.c
dpa/midas_dpa_rnn/device/: midas_dpa_rnn_kernels_dev.c
dpa/midas_dpa_rnn/host/: midas_dpa_rnn_sample.c
dpa/midas_dpa_rnn/include/: midas_dpa_runtime.h
experiments/: aggregate_results.py  run_all.sh  tune_thresholds.py
scripts/: apply_tc_rate_limit.sh  build_arm_native.sh  build_doca_flow_enforcer.sh  build_dpa_arm.sh  build_midas_dpa_rnn.sh  build_verbs_guard.sh  clear_ovs_mirror.sh  clear_tc_rate_limit.sh  deploy_arm_midas_worker.sh  run_arm_midas_worker.sh  run_live_smoke_server.sh  run_midas_dpa_rnn.sh  run_ovs_mirror_capture.sh  run_vf_direct_midas.sh  run_vf_direct_midas_arm.sh  setup_ovs_mirror.sh  setup_rdma_ips.sh  setup_vf_direct_container.sh  setup_vf_ovs_mirror.sh  start_peer_perftest.sh  start_worker_dpa_arm.sh  start_worker_qp_enforce_dpa_arm.sh  test_roce_capture_matrix.sh  wait_arm_access.sh
src/: arm_midas_worker.py  arm_qp_enforcer.py  host_to_arm_forwarder.py  midas.py  midas_enforcer.py  pcap_roce_to_midas_jsonl.py  perftest_to_midas_jsonl.py  train_hybrid_classifier.py
src/arm_native/: midas_arm_native.cpp
src/classifier/: export_rnn_to_c.py  export_rnn_to_dpa_fixed.py  export_trace_to_c.py  midas_rnn.h  midas_rnn_infer.c  test_rnn_parity.py
src/manager/: doca_flow_enforcer.c  midas_verbs_guard.c  mitigation_plan.py  policy_engine.py
src/monitor/: capture_matrix.py  port_counter_enricher.py  roce_event_schema.py
